fix gap icons pt2

--- a/src/app/pages/competences/competences.component.scss
+++ b/src/app/pages/competences/competences.component.scss
@@ -154,9 +154,15 @@
     align-items: center;
     justify-content: center;
     font-size: 1rem;
+    line-height: 1;
     flex-shrink: 0;
 
-    svg, i { width: 1em; height: 1em; }
+    > span, > i {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      line-height: 0;
+    }
   }
 
   &__name {
@@ -271,7 +277,10 @@
 
   &__icon {
     font-size: 2.25rem;
-    line-height: 1;
+    line-height: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &__body {
